Fix flexbox wrap issue with sixth project
Moved sixth project to the 4th child so that it will
wrap underneath fourth project instead of bumping to
a new line. Added padding to bottom of divs (except
last child) to retain the grid spacing.

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -15,19 +15,6 @@ $breakpoint1: 0px;
 $breakpoint2: 400px;
 $breakpoint3: 960px;
 //
-$gutter_width_half: 1.945%;
-$gutter_width: 3.89%;
-$col_width_1: 6.5%;
-$col_width_2: 16.89%;
-$col_width_3: 27.28%;
-$col_width_4: 37.67%;
-$col_width_5: 48.06%;
-$col_width_6: 58.45%;
-$col_width_7: 79.73%;
-$col_width_8: 83.12%;
-$col_width_9: 93.51%;
-$col_width_10: 100%;
-//
 $grid_margin_half: 15px;
 $grid_margin: 30px;
 
@@ -63,7 +50,8 @@ body {
 }
 
 img, embed, object, video {
-    max-width: 100%
+    max-width: 100%;
+    display: block;
 }
 
 
@@ -72,7 +60,7 @@ img, embed, object, video {
 .nav_container {
     position: fixed;
     top: .5rem;
-    left: 1rem;
+    left: 1.2rem;
     transform-origin: bottom left;
     transform: rotate(90deg);
     letter-spacing: .1rem;
@@ -161,7 +149,7 @@ a:visited {
         display: flex;
         flex-wrap: wrap;
 
-        div {
+        > div {
             margin: 15px;
         }
 
@@ -179,15 +167,16 @@ a:visited {
 
         .project:nth-child(4) {
             width: calc(60% - 30px);
+
+            >div:not(:last-child) {
+                padding-bottom: $grid_margin;
+            }
         }
 
         .project:nth-child(5) {
             width: calc(40% - 30px);
         }
 
-        .project:nth-child(6) {
-            width: calc(60% - 30px);
-        }
     }
 }
 
