--- a/styles/main.css
+++ b/styles/main.css
@@ -35,13 +35,14 @@ body {
 
 img, embed, object, video {
   max-width: 100%;
+  display: block;
 }
 
 /* - - - - - - - - - - NAVIGATION - - - - - - - - - - */
 .nav_container {
   position: fixed;
   top: .5rem;
-  left: 1rem;
+  left: 1.2rem;
   transform-origin: bottom left;
   transform: rotate(90deg);
   letter-spacing: .1rem;
@@ -109,7 +110,7 @@ a:visited {
     display: flex;
     flex-wrap: wrap;
   }
-  main div {
+  main > div {
     margin: 15px;
   }
   main .project:nth-child(1) {
@@ -124,11 +125,11 @@ a:visited {
   main .project:nth-child(4) {
     width: calc(60% - 30px);
   }
+  main .project:nth-child(4) > div:not(:last-child) {
+    padding-bottom: 30px;
+  }
   main .project:nth-child(5) {
     width: calc(40% - 30px);
-  }
-  main .project:nth-child(6) {
-    width: calc(60% - 30px);
   }
 }
 /* - - - - - - - - - - FOOTER - - - - - - - - - - */
